--- a/content/index.html
+++ b/content/index.html
@@ -1,14 +1,16 @@
----
-title: Home
----
-
-<h1>A Brand New Nanoc Site</h1>
-
-<p>You’ve just created a new Nanoc site. The page you are looking at right now is the home page for your site. To get started, consider replacing this default homepage with your own customized homepage. Some pointers on how to do so:</p>
-
-<ul>
-	<li><p><strong>Change this page’s content</strong> by editing the “index.html” file in the “content” directory. This is the actual page content, and therefore doesn’t include the header, sidebar or style information (those are part of the layout).</p></li>
-	<li><p><strong>Change the layout</strong>, which is the “default.html” file in the “layouts” directory, and create something unique (and hopefully less bland).</p></li>
-</ul>
-
-<p>If you need any help with customizing your Nanoc web site, be sure to check out the documentation (see sidebar), and be sure to subscribe to the discussion group (also see sidebar). Enjoy!</p>
+<div class="index">
+	<% article_categories.each do |category| %>
+		<div class="index__group">
+			<h1 class="index__category">
+				<a class="index__link" href="#"><%= category %></a>
+			</h1>
+			<ul class="index__articles">
+				<% category_articles(category).each do |article| %>
+					<li class="index__article">
+						<a class="index__link" href="#"><%= article[:title] %></a>
+					</li>
+				<% end %>
+			</ul>
+		</div>
+	<% end %>
+</div>
