Implement article view

--- a/content/index.html
+++ b/content/index.html
@@ -1,4 +1,4 @@
-<div class="index">
+<div class="l-index index">
 	<% article_categories.each do |category| %>
 		<div class="index__group">
 			<h1 class="index__category">
