--- a/content/index.html
+++ b/content/index.html
@@ -2,7 +2,9 @@
 	<% article_categories.each do |category| %>
 		<div class="index__group">
 			<h1 class="index__category">
-				<a class="index__link" href="/<%= slug_for(category) %>"><%= category %></a>
+				<a class="index__link" href="<%= category_link(category) %>">
+					<%= category_name(category) %>
+				</a>
 			</h1>
 			<ul class="index__articles">
 				<% category_articles(category).each do |article| %>
